# adk2.0-project

./: .env_sample  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
app/: env.py  main.py  web.py
app/agents/: branch_agents.py  dynamic_recovery.py  extractor_agent.py  market_a2a_app.py  market_price_agent.py  prompts.py  remote_agents.py  root_workflow.py
app/api/: chat.py  fridge.py
app/db/: session.py
app/db/models/: __init__.py  fridge.py  history.py  ingredient.py  recipe.py  user.py
app/db/repositories/: fridge_repository.py  recipe_repository.py  recommendation_repository.py  user_repository.py
app/schemas/: agent_io.py  shopping.py
app/services/: ranking_service.py  response_formatter.py  substitution_service.py
app/static/: app.js
app/templates/: index.html
app/tools/: agent_tools.py  fridge_tools.py  history_tools.py  recipe_tools.py
data/market_catalog/: emart.json  homeplus.json  ingredient_aliases.json  lotte_mart.json
db/: schema.sql
docs/superpowers/plans/: 2026-04-23-chatbot-ui.md
docs/superpowers/specs/: 2026-04-23-chatbot-ui-design.md
scripts/: seed.py
tests/: test_fridge_api.py  test_market_catalog.py  test_response_formatter.py  test_shopping_routing_context.py
