[project]
name = "adk2-0-project"
version = "0.1.0"
description = "adk 2.0 과제 : 냉털Chef Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-adk>=2.0.0a3",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.1.0b2",
]
